@@ -406,3 +406,21 @@ Description: Transitional package for neutron-sriov-agent
  etc.)
  .
  This package is a transitional package and can be safely removed.
+
+Package: neutron-bgp-dragent
+Architecture: all
+Depends: neutron-common (= ${source:Version}),
+         ${misc:Depends},
+         ${python:Depends},
+         ${shlibs:Depends},
+Description: Neutron is a virtual network service for Openstack - BGP Dynamic Routing agent
+ Neutron is a virtual network service for Openstack, and a part of
+ Netstack. Just like OpenStack Nova provides an API to dynamically
+ request and configure virtual servers, Neutron provides an API to
+ dynamically request and configure virtual networks. These networks
+ connect "interfaces" from other OpenStack services (e.g., virtual NICs
+ from Nova VMs). The Neutron API supports extensions to provide
+ advanced network capabilities (e.g., QoS, ACLs, network monitoring,
+ etc.)
+ .
+ This package provides the BGP Dynamic Routing agent.
