@@ -1,23 +1,23 @@
 #!/bin/sh
 ### BEGIN INIT INFO
-# Provides:          neutron-dhcp-agent
+# Provides:          neutron-bgp-dragent
 # Required-Start:    $network $local_fs $remote_fs $syslog
 # Required-Stop:     $remote_fs
-# Should-Start:      mysql postgresql rabbitmq-server keystone neutron-ovs-cleanup
+# Should-Start:      mysql postgresql rabbitmq-server keystone
 # Should-Stop:       mysql postgresql rabbitmq-server keystone
 # Default-Start:     2 3 4 5
 # Default-Stop:      0 1 6
-# Short-Description: Neutron DHCP agent
-# Description:       Provide DHCP agent for neutron
+# Short-Description: Neutron BGP Dynamic Routing agent
+# Description:       Provide BGP Dynamic Routing agent for Neutron
 ### END INIT INFO
 
-# Author: Mehdi Abaakouk <sileht@sileht.net>
+# Author: Corey Bryant <corey.bryant@canonical.com>
 
 # PATH should only include /usr/* if it runs after the mountnfs.sh script
 PATH=/sbin:/usr/sbin:/bin:/usr/bin
-DESC="OpenStack Neutron DHCP agent"
+DESC="OpenStack Neutron BGP Dynamic Routing agent"
 PROJECT_NAME=neutron
-NAME=${PROJECT_NAME}-dhcp-agent
+NAME=${PROJECT_NAME}-bgp-dragent
 # --config-file=/etc/neutron/neutron.conf will be appended
 # to DAEMON_ARGS later by openstack-pkg-tools
-DAEMON_ARGS="--config-file=/etc/neutron/dhcp_agent.ini"
+DAEMON_ARGS="--config-file=/etc/neutron/bgp_dragent.ini"
