@@ -1,0 +1,2 @@
+etc/bgp_dragent.ini etc/neutron
+usr/bin/neutron-bgp-dragent usr/bin
