@@ -19,6 +19,6 @@ PATH=/sbin:/usr/sbin:/bin:/usr/bin
 DESC="OpenStack Neutron L3 agent"
 PROJECT_NAME=neutron
 NAME=${PROJECT_NAME}-l3-agent
-# --config-file=/etc/neutron/neutron.conf will be happened 
+# --config-file=/etc/neutron/neutron.conf will be appended
 # to DAEMON_ARGS later by openstack-pkg-tools
 DAEMON_ARGS="--config-file=/etc/neutron/l3_agent.ini --config-file=/etc/neutron/fwaas_driver.ini"
