@@ -19,6 +19,6 @@ DESC="Openstack Neutron LinuxBridge Agent"
 PROJECT_NAME=neutron
 NAME=${PROJECT_NAME}-linuxbridge-agent
 DAEMON=/usr/bin/neutron-linuxbridge-agent
-# --config-file=/etc/neutron/neutron.conf will be happened
+# --config-file=/etc/neutron/neutron.conf will be appended
 # to DAEMON_ARGS later by openstack-pkg-tools
 DAEMON_ARGS="--config-file=/etc/neutron/plugins/ml2/linuxbridge_agent.ini"
